--- a/dev/assets/css/tailwind.css
+++ b/dev/assets/css/tailwind.css
@@ -34,6 +34,7 @@
 @import './components/slide-cart.css';
 @import './components/video-embed.css';
 @import './components/quick-order.css';
+@import './components/grid-list-switch.css';
 
 @import './dependencies/bamboo-hr.css';
 @import './dependencies/slick.css';
