--- a/snippets/product-card-content-quick-order.liquid
+++ b/snippets/product-card-content-quick-order.liquid
@@ -1,62 +1,71 @@
 <!-- snippets/product-card-content-quick-order -->
 {%- comment %}
-  Variables:
-  - product: [Product Object]
-{% endcomment -%}
-
-{% assign is_archive = false %}
+Variables:
+- product: [Product Object]
+{% endcomment -%}{% assign is_archive = false %}
 {% assign is_class = false %}
 
-{%- if product.tags contains 'archive' -%}
+  {%- if product.tags contains 'archive' -%}
   {% assign is_archive = true %}
-{%- elsif product.tags contains 'class'  -%}
+{%- elsif product.tags contains 'class' -%}
   {% assign is_class = true %}
 {%- endif -%}
 
 {% assign current_variant = product.selected_or_first_available_variant %}
 
-<div class="bg-white w-full h-full flex flex-col gap-2 justify-between px-4 xl:px-12 py-4 xl:py-6">
-  <div class="">
-    {% render 'origin-locale', product: product %}
+<div class="list-view__heading-price bg-white w-full h-full flex flex-col gap-2 justify-between px-4 xl:px-12 py-4 xl:py-6">
 
-    <div class="flex flex-col md:flex-row justify-between items-start gap-2">
-      <h3 class="text-base md:text-lg xl:text-2xl font-couch">{{ product.title }}</h3>
+  <div class="list-view_content-price-wrapper flex w-full justify-between items-center">
+    <div class="list-view__heading-content-wrapper">
+      <div class="list-view_origin-locale">
+        {% render 'origin-locale', product: product %}
+      </div>
 
-      {%- unless is_archive -%}
-        {% render 'product-price', variant: current_variant %}
-      {%- endunless -%}
+      <div class="list-view__heading-roast-level">
+        <div class="list-view__heading-notes">
+          <div class="flex flex-col md:flex-row justify-between items-start gap-2">
+            <h3 class="text-base md:text-lg xl:text-2xl font-couch">{{ product.title }}</h3>
+
+            <div class="list-view_price">
+              {%- unless is_archive -%}
+                {% render 'product-price', variant: current_variant %}
+              {%- endunless -%}
+            </div>
+          </div>
+          <div class="list-view_tasting-notes">
+            {% render 'tasting-notes', product: product %}
+          </div>
+        </div>
+
+
+
+        <div class="list-view_roast-level-graph">
+          {% render 'roast-level', product: product %}
+        </div>
+      </div>
     </div>
 
-    {% render 'tasting-notes', product: product %}
 
-    {% render 'roast-level', product: product %}
+    <div class="list-view_card-price hidden">
+
+      {% assign price = current_variant.price %}
+      {%- if price == 0 -%}
+        <p class="text-lg xl:text-2xl font-tenso font-medium">Free!</p>
+      {%- else -%}
+        <p class="text-lg xl:text-2xl font-tenso font-medium">{{ price | money_without_trailing_zeros }}/unit</p>
+      {%- endif -%}
+
+    </div>
   </div>
-
-
-  {% comment %}
-  {%- unless is_archive or is_class -%}
-    {% render 'product-card-form', product: product %}
-  {%- endunless -%}
-  {% endcomment %}
-
-  {%- if is_class -%}
-    <button type="button" name="button" class="btn btn-secondary">Register</button>
-  {%- endif -%}
-
-
 
 
 
   <button class="btn btn-secondary quick-order-btn">Quick Buy</button>
 
-  
+
   <div class="quick-order-overlay opacity-20 cursior-pointer-none bg-black/20 fixed top-0 bottom-0 left-0 h-screen w-screen hidden"></div>
   <div class="product--buy-panel-quick-order border-black border bg-white w-full lg:w-8/12 ">
     {% render 'product-form-quick-order', product: product %}
   </div>
 
 </div>
-
-
-
-
