Quick Order + Grid/List Switch

--- a/dev/assets/css/tailwind.css
+++ b/dev/assets/css/tailwind.css
@@ -33,6 +33,9 @@
 @import './components/roast-level.css';
 @import './components/slide-cart.css';
 @import './components/video-embed.css';
+@import './components/quick-order.css';
+@import './components/grid-list-switch.css';
+
 
 @import './dependencies/bamboo-hr.css';
 @import './dependencies/slick.css';
