filter + QO edits

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -21,6 +21,11 @@
 
   gtag('config', 'AW-945523684');
 </script>
+
+ <script>
+    let defaultActiveView = 'list'
+  </script>
+  
   </head>
   <body data-template="{{ template.name }}">
     <a href="#MainContent" class="sr-only">Skip to main content</a>
