--- a/snippets/product-form-quick-order.liquid
+++ b/snippets/product-form-quick-order.liquid
@@ -1,6 +1,6 @@
 <!-- snippets/product-card-form-quick-order -->
-<div class="relative z-[2] grid xl:grid-cols-2">
-<div class="quick-order-close cursor-pointer absolute top-5 right-5 z-10">
+<div class="relative z-[2] grid lg:grid-cols-2">
+<div class="quick-order-close cursor-pointer absolute top-0 right-0 p-5 z-10">
   <span>
     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path d="M1 1L22.5 22.5" stroke="black" stroke-width="2"/>
