--- a/dev/assets/css/components/quick-order.css
+++ b/dev/assets/css/components/quick-order.css
@@ -11,6 +11,11 @@
 
 }
 
+
+.quick-order-overlay {
+  background-color: rgb(0 0 0 / 0.04);
+}
+
 .product--buy-panel-quick-order .product-card--img-container{
   height: 100%;
   border-bottom: 0
@@ -49,7 +54,10 @@
       object-fit: contain;
 }
 
-  
+.min-height-inherit{
+  min-height: inherit;
+}
+
 
 
 @media (min-width: 768px) {
