--- a/snippets/contact-form.liquid
+++ b/snippets/contact-form.liquid
@@ -7,19 +7,30 @@
         </h2>
     {%- endunless -%}
 
-    {%- unless subtext == blank -%}
-        <p  class="font-tenso mt-6 mb-7 animate animate-fadeInUp"
-            data-delay="200">
-            {{ subtext }}
-        </p>
-    {%- endunless -%}
+    
 
     {% form 'contact' %}
+        
         {%- if form.errors -%}
             <div class="mb-2.5">
                 {{ form.errors | default_errors }}
             </div>
         {%- endif -%}
+
+        {%- if form.posted_successfully? -%}
+          <p class="form-message f--main mb-5 font-medium text-base lg:text-xl font-couch"
+             tabindex="-1"
+             data-form-status>
+            Thank you for submitting this form
+          </p>
+        {%- endif -%}
+
+        {%- unless subtext == blank -%}
+            <p  class="font-tenso mt-6 mb-7 animate animate-fadeInUp"
+                data-delay="200">
+                {{ subtext }}
+            </p>
+        {%- endunless -%}
 
         <div    class="flex flex-col gap-5 animate animate-fadeInUp" 
                 data-delay="400">
@@ -31,6 +42,7 @@
                     options: topics %}
             {% endunless %}
               
+            <span class="contact-form-error contact-first-name-error text-sm text-ethiopia hidden">First Name cannot be blank</span>
             {% render 'floating-label', 
                 id: 'contact-first-name',
                 input_name: 'contact[first_name]',
@@ -40,6 +52,7 @@
                 label: '*First Name',
                 label_class: 'text-black' %}
 
+            <span class="contact-form-error contact-last-name-error text-sm text-ethiopia hidden">Last Name cannot be blank</span>
             {% render 'floating-label', 
                 id: 'contact-last-name',
                 input_name: 'contact[last_name]',
@@ -49,6 +62,7 @@
                 label: '*Last Name',
                 label_class: 'text-black' %}
 
+            <span class="contact-form-error contact-email-error text-sm text-ethiopia hidden">Email cannot be blank</span>
             {% render 'floating-label', 
                 id: 'contact-email',
                 input_name: 'contact[email]',
@@ -59,16 +73,21 @@
                 label: '*Email',
                 label_class: 'text-black' %}
 
+
             {% render 'floating-label', 
                 id: 'contact-phone',
                 input_name: 'contact[phone]',
-                input_type: 'phone',
+                input_type: 'tel',
                 input_val: form.phone,
                 input_class: 'border-black',
                 placeholder: '123-456-9999',
                 label: 'Phone (xxx-xxx-xxxx)',
-                label_class: 'text-black' %}
+                label_class: 'text-black'
+                additional_attr: 'maxlength="10"'
+                
+                %}
 
+            <span class="contact-form-error contact-textbox-error text-sm text-ethiopia hidden">Please enter some text</span> 
             {% render 'floating-label', 
                 id: 'contact-body',
                 input_name: 'contact[body]',
@@ -81,9 +100,10 @@
             <div    class="flex justify-end w-full animate animate-fadeInUp md:animate-slideInRight">
                 <button type="submit" 
                         name="send" 
-                        class="btn btn-secondary w-full md:w-auto">
+                        class="btn btn-secondary w-full md:w-auto hidden">
                     Submit
                 </button>
+                <div class="btn btn-secondary w-full md:w-auto contact-form-submit cursor-pointer"> Submit </div>
             </div>
         </div>
     {% endform %}
