--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -2838,6 +2838,22 @@ a.icon-link:hover svg, a.icon-link:focus-within svg {
   z-index: 1;
 }
 
+.z-\[10\] {
+  z-index: 10;
+}
+
+.z-\[40\] {
+  z-index: 40;
+}
+
+.z-\[50\] {
+  z-index: 50;
+}
+
+.z-\[20\] {
+  z-index: 20;
+}
+
 .order-2 {
   order: 2;
 }
@@ -9482,6 +9498,11 @@ a, button {
   .xl\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .xl\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 }
 
